--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -6,7 +6,7 @@ body{
    
 }
 .top-nav-bar{
-    height: 90px;
+    height: 100px;
     top: 0%;
     position: sticky;
     background: #d5c0bf;
@@ -37,7 +37,7 @@ body{
 .search-box{
     
     display: inline-flex;
-    width: 100%;
+    width: 60%;
     margin-top: 12px;
     
 }
@@ -48,8 +48,13 @@ body{
 
 }
 .topnav {
-    margin-left: 500px;
+    margin-left: 1000px;
     padding: 13px;
+    margin-right: 20px;
+    display: flex;
+    position: fixed;
+   
+
 }
 /* Style the links inside the navigation bar */
 .topnav a {
@@ -58,8 +63,9 @@ body{
     text-align: center;
    padding: 10px 10px;
     text-decoration: none;
-    font-size: 23px;
+    font-size: 20px;
     font-family:'Poppins', sans-serif;
+    
   }
   
   /* Change the color of links on hover */
@@ -70,8 +76,7 @@ body{
   .topnav2 {
     margin-right: 500px;
     margin-left: 30px;
-    margin-top: 10px;
-   
+    margin-top: 20px;
 }
 .topnav2 a {
    
@@ -90,7 +95,7 @@ body{
   }
   .top-nav-bar2{
     position: fixed;
-    height: 45px;
+    height: 65px;
     width: 1800px;
     top: 10%;
     display: flex;
@@ -272,5 +277,40 @@ width: 1815px;
     bottom:0}
 @media only screen and (max-width:990px){.product-grid9{margin-bottom:30px}
 }
+.font-small{
+    background-color: #D5C0BF;
+    height: 300px;
+    margin-bottom: 0px;
+}
+.title{
+    color: white;
+    margin-top: 50px;
+}
 
- 
+.footer-copyright{
+    margin-top: 70px;
+    text-align: center;
+
+}
+
+
+.row2 {
+    display: flex;
+    margin-bottom: 80px;
+    margin-top: 100px;
+    text-align: center;
+
+  }
+  .columns {
+    float: left;
+    padding-right: 80px;
+    
+    margin-left: 5\0px;
+    
+    border-right: #000 1px solid;
+    
+  }
+  
+  
+
+    
