Edited the header. Logo added

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -13,13 +13,12 @@ body{
     margin-bottom: 20px;
     border-bottom: 1px solid #d5c0bf; 
     z-index: 2;
+    margin-left: 100px
 }
-.logo{
-    height: 40px;
-   margin-top: 15px;
+
    
    
-}
+
 .form-control{
     text-align: center;
     font-size: 20px;
@@ -36,20 +35,37 @@ body{
 
 .search-box{
     
-    display: inline-flex;
-    width: 60%;
+    display: inline-flex !important;
+    width: 60% ;
     margin-top: 12px;
+    margin-left: 130px;
+   
     
+}
+.logo{
+    height: 80px;
+    width: 100px;
+    margin-right: 100px;
+    float: left;
+    position: fixed;
+    z-index: 1;
+    margin-top: 0px;
+
 }
 .logoG{
     height: 50px;
-    width: 40px;
+    width: 150px;
     margin-right: 100px;
+    float: left;
+    position: fixed;
+    z-index: 3;
+    margin-top: 20px;
+    margin-left: 90px;
 
 }
 .topnav {
-    margin-left: 1000px;
-    padding: 13px;
+    margin-left: 900px;
+    padding: 5px;
     margin-right: 20px;
     display: flex;
     position: fixed;
